using XPowerApi.Models.UserModels;

namespace XPowerApi.DbModels
{
    public class UserDb
    {
        public string id { get; set; }

        public string email { get; set; }

        public string firstname { get; set; }

        public string lastname { get; set; }

        public string username { get; set; }

        public string hashed_password { get; set; }

        public string salt { get; set; }

        public User ConvertToUser()
        {
            return new User
            {
                Id = int.Parse(id.Split(':')[1]),
                Email = email,
                Firstname = firstname,
                Lastname = lastname,
                UserName = username
            };
        }

        public UserCredentials ConvertToUserCredentials()
        {
            return new UserCredentials
            {
                Id = int.Parse(id.Split(':')[1]),
                Firstname = firstname,
                Lastname = lastname,
                UserName = username,
                HashedPassword = hashed_password,
                Email = email,
                Salt = salt
            };
        }
    }
}