namespace XPowerApi.Models.HomeModels
{
    public class Home
    {
        public int Id { get; set; }

        public string Name { get; set; }
    }
}