namespace XPowerApi.Models.HomeModels
{
    public class HomeCreate
    {
        public string Name { get; set; }
    }
}