namespace XPowerApi.Models.UserModels
{
    public class UserLogin
    {
        public string Username { get; set; }
        public string Password { get; set; }
    }
}
